spacing fixes on mobile design

--- a/style.css
+++ b/style.css
@@ -28,12 +28,20 @@ body {
 }
 
 .main {
-    padding: 1.7rem;
+    padding: 1rem 1.7rem 1.7rem;
+}
+
+.prod-type {
+    font-size: .9rem;
+    letter-spacing: .2rem;
+
 }
 
 p, .cart-btn {
+    color: hsl(228, 12%, 48%);
     font-family: "Montserrat", serif;
-    color: hsl(228, 12%, 48%)
+    font-size: 1rem;
+    line-height: 1.4rem;
 }
 
 h1, .sale-price {
@@ -42,11 +50,14 @@ h1, .sale-price {
     font-variation-settings:
     "SOFT" 0,
     "WONK" 0;
+    line-height: 2.1rem;
+    padding: .7rem 0 1rem;
 }
 
 .prices {
     display: flex;
     align-items: center;
+    padding: .8rem 0 .2em;
 }
 
 .sale-price {
@@ -63,10 +74,26 @@ h1, .sale-price {
 .cart-btn {
     background-color: hsl(158, 36%, 37%);
     color: hsl(0, 0%, 100%);
-    font-weight: 600;
+    font-weight: 500;
     text-align: center;
     border-radius: .5rem;
-    height: 3rem;
+    padding: 1rem;
+}
+
+.cart-btn:hover {
+    background-color: rgb(36, 63, 50);
+    cursor: pointer;
+}
+
+.inner-btn {
+    display: flex;
+    justify-content: center;
+}
+
+.btn-text {
+    color: white;
+    text-decoration: none;
+    padding-left: .6rem;
 }
 
 
